--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,12 @@ edition = "2021"
 [dependencies]
 futures-util = "0.3.28"
 quick-replace = "0.1.1"
+regex = "1.7.3"
 serde_json = "1.0.95"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-stream = "0.1.12"
-warp = {version = "0.3.4", features = ["websocket"] }
+warp = { version = "0.3.4", features = ["websocket"] }
+
+[[bin]]
+name = "warp_sockets"
+path = "src/main.rs"
