--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ tokio-stream = "0.1.12"
 warp = { version = "0.3.4", features = ["websocket"] }
 
 [[bin]]
-name = "warp_sockets"
+name = "quick_replace_web"
 path = "src/main.rs"
